force-app/main/default/objects/Associated_Account__c/Associated_Account__c.object-meta.xml
<CustomObject>
    <label>Associated Account</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Associated Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>