force-app/main/default/objects/Associated_Account__c/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <label>Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>