force-app/main/default/objects/Associated_Account__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>