force-app/main/default/objects/Associated_Account__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Associated Accounts</relationshipLabel>
    <relationshipName>Associated_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>