force-app/main/default/objects/Associated_Account__c/fields/LicenseAddress__c.field-meta.xml
<CustomField>
    <fullName>LicenseAddress__c</fullName>
    <formula>License__r.RenewalMailToStreet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Address</label>
    <type>Text</type>
</CustomField>