force-app/main/default/objects/Associated_Account__c/fields/LicenseCity__c.field-meta.xml
<CustomField>
    <fullName>LicenseCity__c</fullName>
    <formula>License__r.RenewalMailToCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License City</label>
    <type>Text</type>
</CustomField>