force-app/main/default/objects/Associated_Account__c/fields/LicenseeName__c.field-meta.xml
<CustomField>
    <fullName>LicenseeName__c</fullName>
    <formula>License__r.LicenseeNameFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee Name</label>
    <type>Text</type>
</CustomField>