force-app/main/default/objects/Associated_Account__c/fields/LicenseState__c.field-meta.xml
<CustomField>
    <fullName>LicenseState__c</fullName>
    <formula>License__r.RenewalMailToState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License State</label>
    <type>Text</type>
</CustomField>