force-app/main/default/objects/Associated_Account__c/fields/LicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>LicenseStatus__c</fullName>
    <formula>TEXT(License__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status</label>
    <type>Text</type>
</CustomField>