force-app/main/default/objects/Associated_Account__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>CDH</fullName>
            </value>
            <value>
                <fullName>CDT</fullName>
            </value>
            <value>
                <fullName>DTT</fullName>
            </value>
            <value>
                <fullName>GVT</fullName>
            </value>
            <value>
                <fullName>MDR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>PIC</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RES</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>