force-app/main/default/objects/Associated_Account__c/fields/positionStatus__c.field-meta.xml
<CustomField>
    <fullName>positionStatus__c</fullName>
    <label>Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>