force-app/main/default/objects/Associated_Account__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NEMP</fullName>
            </value>
            <value>
                <fullName>REAC</fullName>
            </value>
            <value>
                <fullName>RSTR</fullName>
            </value>
            <value>
                <fullName>XTMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>