force-app/main/default/objects/Associated_Account__c/fields/TermReason__c.field-meta.xml
<CustomField>
    <fullName>TermReason__c</fullName>
    <label>Term Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DELQ</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>REL</fullName>
            </value>
            <value>
                <fullName>TERM</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>